# darkmine-data-mcp

./: .mcp.json  LICENSE  README.md  pyproject.toml
src/darkmine_data_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  models.py  server.py
tests/: test_client.py  test_config.py  test_tools.py
